# geodata

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
datasets/: de4l.py  taxi.py
de4l_geodata/geodata/: point.py  point_t.py  route.py
de4l_geodata/geodatasets/: cabspotting.py  de4l.py  geolife.py  t_drive.py  taxi.py
de4l_geodata/helper/: parser.py
de4l_geodata/mobility_model/: mobility_model.py
de4l_geodata/mobilitymodels/: mobility_model.py
geodata/: point.py  pointT.py  point_t.py  route.py
geodata/geodata/: point_t.py  route.py
geodata/geodatasets/: cabspotting.py  de4l.py  geolife.py  t_drive.py  taxi.py
geodata/helper/: parser.py
geodata/mobility_model/: mobility_model.py
geodatasets/: de4l.py  taxi.py
helper/: helper.py
tests/datasets/: test_de4l.py  test_taxi.py
tests/geodata/: test_point.py  test_pointT.py  test_point_t.py  test_route.py
tests/geodatasets/: test_cabspotting.py  test_de4l.py  test_geolife.py  test_t_drive.py  test_taxi.py
tests/helper/: test_helper.py
tests/mobility_model/: test_mobility_model.py
tests/resources/: test-sensor-dataset-small.json  test-sensor-dataset.json  test-t-drive-dataset-1.txt  test-t-drive-dataset-2.txt  test-t-drive-dataset-3.txt  test-taxi-dataset-missing-data.csv  test-taxi-dataset-profile.csv  test-taxi-dataset-small.csv  test_cabspotting_1.txt  test_cabspotting_2.txt  test_geolife.plt
