[tool.poetry]
name = "de4l-geodata"
version = "0.1.0"
description = "A package for working with geolocations"
repository = "https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-geodata"
authors = ["Maja Schneider","Lukas Gehrke"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.4"
haversine = "^2.5.1"
torch = {version = "~1.9.0", optional = true}

[tool.poetry.extras]
torch = ["torch"]


[tool.poetry.urls]
"Bug Tracker" = "https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-geodata/-/issues"
"Source" = "https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-geodata"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
