[tool.poetry]
name = "de4l-geodata"
version = "0.3.1"
description = "A package for working with geolocations"
repository = "https://github.com/majaschneider/geodata.git"
authors = ["Maja Schneider","Lukas Gehrke"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
openrouteservice = "^2.3.3"
geopy = "^2.2.0"
numpy = "^1.22.2"
pandas = "^1.4.0"
haversine = "^2.5.1"
torch = {version = "~1.9.0", optional = true}
de4l_detour_detection = { git = "https://github.com/majaschneider/detour-detection.git", branch = "main"}

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/majaschneider/geodata/issues"
"Source" = "https://github.com/majaschneider/geodata.git"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
