[metadata]
name = de4l-geodata
version = 0.0.3
description = A package for working with geolocations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-geodata
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .