[metadata]
name = de4l-geodata
version = 0.0.6
description = A package for working with geolocations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-geodata
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    haversine>=2.5.1
    numpy>=1.21.2
    pandas>=1.3.3
    torch>=1.9.1

[options.packages.find]
where = .
